<resources>
    <string name="app_name">CloudMusic</string>
    <string name="menu_find">发现</string>
    <string name="menu_podcast">博客</string>
    <string name="menu_mine">我的</string>
    <string name="menu_focus">关注</string>
    <string name="menu_cloud_village">云村</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_mine">我的</string>
    <string name="title_discovery">发现</string>
    <string name="title_podcast">播客</string>
    <string name="title_village">云村</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phoneLogin">手机号登陆</string>
    <string name="experience">立即体验</string>
    <string name="agree_protocol">同意</string>
    <string name="title_user_protocol">服务条款</string>
    <string name="lab_and">、</string>
    <string name="title_privacy_protocol">隐私政策</string>
    <string name="title_attention">关注</string>
</resources>